# cool-apps

./: .gitignore  pyproject.toml
humanize-font/: test_humanize.py  ttf_humanize.py
pdf_json/: read_pdf_to_json.py
vector-db/: main.py  vector_db.ipynb
