[project]
name = "vectordb-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "pymupdf>=1.24.0",
    "fonttools>=4.62.1",
]
